--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ section{
     left: -600px;
     transform: scaleX(-1) rotate(-10deg);
     animation: reindeer 8s linear forwards;
-    animation-delay: 2.8s;
+    animation-delay: 3s;
 }
 @keyframes reindeer{
     0%{
@@ -491,9 +491,9 @@ section{
 .box-gift .gift-bottom{
     position: absolute;
     width: 90px;
-    background: white;
+    background: #fff;
     height: 70px;
-    border: 4px solid rgb(0, 0, 184);
+    border: 4px solid rgb(13, 53, 4);
     bottom: 0;
 }
 .gift-bottom{
@@ -548,7 +548,7 @@ section{
     content: '';
     width: 20px;
     height: 100%;
-    background: rgb(60, 0, 255);
+    background: rgb(36, 128, 16);
     top: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -558,7 +558,7 @@ section{
     width: 100px;
     height: 30px;
     background: #fff;
-    border: 4px solid rgb(0, 0, 184);
+    border: 4px solid rgb(13, 53, 4);
     z-index: 100;
     top: 20px;
     animation: giftTop 1.5s linear infinite;
@@ -626,7 +626,7 @@ section{
     content: '';
     width: 20px;
     height: 100%;
-    background: rgb(60, 0, 255);
+    background: rgb(36, 128,16);
     top: 0;
     left: 50%;
     transform: translateX(-50%);
@@ -645,7 +645,7 @@ section{
     width: 45px;
     height: 20px;
     top: 10px;
-    border: 2px solid rgb(0, 0, 184);
+    border: 2px solid rgb(36, 128, 16);
     border-radius: 23% 77% 19% 81% / 29% 75% 25% 71%;
     transform: translateX(-50%) rotate(20deg);
     left: 40%;
@@ -655,7 +655,7 @@ section{
     width: 45px;
     height: 20px;
     top: 12px;
-    border: 2px solid rgb(0, 0, 184);
+    border: 2px solid rgb(36, 128, 16);
     border-radius: 76% 24% 80% 20% / 71% 27% 73% 29% ;
     transform: translateX(50%) rotate(-10deg);
     right: 40%;
@@ -692,7 +692,7 @@ section{
     border-radius: 3px;
     background-color: #fff;
     z-index: -1;
-    animation: haha 2s 3s linear infinite;
+    animation: haha 2s 5s linear infinite;
 }
 .box-gift.active .content{
     left: 50%;
@@ -732,6 +732,7 @@ section{
 .fa-xmark:hover{
     filter: drop-shadow(0 0 10px #fff);
 }
+
 .content1{
     position: absolute;
     width: 700px;
